--- a/templates/index.html
+++ b/templates/index.html
@@ -63,28 +63,28 @@
           </select>
 
           <br><br><br><br>
-          <label for="familiaritynum">(*)您對於利用聽力分辨英文語音數字 0 至 9 (zero, one, two ...) 的信心程度為何？</label>
+          <label for="familiaritynum">(*)您對於利用聽力去分辨英文語音數字的 0 至 9 (zero, one, two ...) 多有信心？</label>
           <!-- <input type="number" id="familiaritynum" name="familiaritynum" placeholder="請輸入數字 1-5（1: 非常沒信心 - 5: 非常有信心）"required/> -->
           <ul class='likert'>
             <li>
               <input type="radio" name="familiaritynum" value="1">
-              <label>1</label>
+              <label>(1)非常沒信心</label>
             </li>
             <li>
               <input type="radio" name="familiaritynum" value="2">
-              <label>2</label>
+              <label>(2)沒有信心</label>
             </li>
             <li>
               <input type="radio" name="familiaritynum" value="3">
-              <label>3</label>
+              <label>(3)中立</label>
             </li>
             <li>
               <input type="radio" name="familiaritynum" value="4">
-              <label>4</label>
+              <label>(4)有信心</label>
             </li>
             <li>
-              <input type="radio" name="familiaritynum" value="5" checked>
-              <label>5</label>
+              <input type="radio" name="familiaritynum" value="5">
+              <label>(5)非常有信心</label>
             </li>
           </ul>
 
@@ -95,23 +95,23 @@
           <ul class='likert'>
             <li>
               <input type="radio" name="familiaritycaptcha" value="1">
-              <label>1</label>
+              <label>(1)非常不熟悉</label>
             </li>
             <li>
               <input type="radio" name="familiaritycaptcha" value="2">
-              <label>2</label>
+              <label>(2)不熟悉</label>
             </li>
             <li>
               <input type="radio" name="familiaritycaptcha" value="3">
-              <label>3</label>
+              <label>(3)中立</label>
             </li>
             <li>
               <input type="radio" name="familiaritycaptcha" value="4">
-              <label>4</label>
+              <label>(4)熟悉</label>
             </li>
             <li>
-              <input type="radio" name="familiaritycaptcha" value="5" checked>
-              <label>5</label>
+              <input type="radio" name="familiaritycaptcha" value="5">
+              <label>(5)非常熟悉</label>
             </li>
           </ul>
 
@@ -124,23 +124,23 @@
           <ul class='likert'>
             <li>
               <input type="radio" name="familiarityaudio" value="1">
-              <label>1</label>
+              <label>(1)非常不熟悉</label>
             </li>
             <li>
               <input type="radio" name="familiarityaudio" value="2">
-              <label>2</label>
+              <label>(2)不熟悉</label>
             </li>
             <li>
               <input type="radio" name="familiarityaudio" value="3">
-              <label>3</label>
+              <label>(3)中立</label>
             </li>
             <li>
               <input type="radio" name="familiarityaudio" value="4">
-              <label>4</label>
+              <label>(4)熟悉</label>
             </li>
             <li>
-              <input type="radio" name="familiarityaudio" value="5" checked>
-              <label>5</label>
+              <input type="radio" name="familiarityaudio" value="5">
+              <label>(5)非常熟悉</label>
             </li>
           </ul>
 
