--- a/templates/submit.html
+++ b/templates/submit.html
@@ -60,10 +60,10 @@
     <br><br>
 
 
-    <label class="statement">(*)請簡述您把該 Audio CAPTCHA 放在第一位（最喜歡）的原因</label>
+    <label class="statement">(*)請簡述您把該 Audio CAPTCHA 放在第一位（最喜歡）的原因：</label>
     <input type="text" name="reasontolove" />
 
-    <label class="statement">(*)請簡述您把該 Audio CAPTCHA 放在最後第一位（最喜歡）的原因：</label>
+    <label class="statement">(*)請簡述您把該 Audio CAPTCHA 放在最後第一位（最不喜歡）的原因：</label>
     <input type="text" name="reasontohate" />
 
     <br><br><br><br>
