--- a/templates/index.html
+++ b/templates/index.html
@@ -89,7 +89,7 @@
           </ul>
 
           <br><br><br><br>
-          <label for="familiaritycaptcha" style="font-size: 14px;">(*)您在這個實驗之前，對於「人機驗證」(CAPTCHA，亦即全自動公開化圖靈測驗人機辨識) <b style="font-weight: bold;">熟悉程度</b>為：(如下圖網頁截圖範例)</label>
+          <label for="familiaritycaptcha">(*)您在這個實驗之前，對於「人機驗證」(CAPTCHA) <u>使用上的熟悉程度</u>為：(如下圖網頁截圖範例)</label>
           <img src="../static/images/captcha_ex.png" with="600" heigh="400" alt="captcha example, answer is xbMDNX">
           <!-- <input type="number" id="familiaritycaptcha" name="familiaritycaptcha" placeholder="請輸入數字 1-5（1: 非常沒信心 - 5: 非常有信心）"required/> -->
           <ul class='likert'>
@@ -116,7 +116,7 @@
           </ul>
 
           <br><br><br><br>
-          <label for="familiarityaudio">(*)您在這個實驗之前，對於「語音版本的」人機驗證 (Audio CAPTCHA) <b style="font-weight: bold;">熟悉程度為</b>： (下圖為網頁截圖之範例：題目會要求您點擊播放鍵，撥出語音版本之人機驗證題目，並請您輸入聽到的數字及英文字母；可參閱: <a href="https://www.phpcaptcha.org/try-securimage/">https://www.phpcaptcha.org/try-securimage/</a> 中的第一個例子)
+          <label for="familiarityaudio">(*)您在這個實驗之前，對於「語音版本的」人機驗證 (Audio CAPTCHA) <u>使用上的熟悉程度</u>： (下圖為網頁截圖之範例：題目會要求您點擊播放鍵，撥出語音版本之人機驗證題目，並請您輸入聽到的數字及英文字母；可參閱: <a href="https://www.phpcaptcha.org/try-securimage/">https://www.phpcaptcha.org/try-securimage/</a> 中的第一個例子)
           </label>
           <img src="../static/images/audio_captcha_ex.png" with="600" heigh="400" alt="captcha example, answer is xbMDNX">
           <!-- <input type="number" id="familiarityaudio" name="familiarityaudio" placeholder="請輸入數字 1-5（1: 非常沒信心 - 5: 非常有信心）"required/> -->
