add mechanism to click times, record task order in demographic

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -602,16 +602,16 @@
       
           <p style = "font-weight: bold;">(*)請按照您的喜好程度，以拖曳的方式排序您剛剛測試的所有 Audio CAPTCHA，最喜歡的放在最上面，依序排列下去。</p><br>
           <ul id="input_ul">
-            <li class="ui-state"><span id='span_tag'>請按此上下拖曳</span><input type="text" disabled/>種類 1<audio id="{{instance1_1}}" controls preload src="{{instance1_1}}">
+            <li class="ui-state"><span id='span_tag'>請按此上下拖曳</span><input type="text" disabled/>種類 1<audio id="{{task_type1_1}}" controls preload src="{{instance1_1}}">
               Your browser does not support the audio element.
             </audio></li>
-            <li class="ui-state"><span id='span_tag'>請按此上下拖曳</span><input type="text" disabled/>種類 2<audio id="{{instance2_1}}" controls preload src="{{instance2_1}}">
+            <li class="ui-state"><span id='span_tag'>請按此上下拖曳</span><input type="text" disabled/>種類 2<audio id="{{task_type2_1}}" controls preload src="{{instance2_1}}">
               Your browser does not support the audio element.
             </audio></li>
-            <li class="ui-state"><span id='span_tag'>請按此上下拖曳</span><input type="text" disabled/>種類 3<audio id="{{instance3_1}}" controls preload src="{{instance3_1}}">
+            <li class="ui-state"><span id='span_tag'>請按此上下拖曳</span><input type="text" disabled/>種類 3<audio id="{{task_type3_1}}" controls preload src="{{instance3_1}}">
               Your browser does not support the audio element.
             </audio></li>
-            <li class="ui-state"><span id='span_tag'>請按此上下拖曳</span><input type="text" disabled/>種類 4<audio id="{{instance4_1}}" controls preload src="{{instance4_1}}">
+            <li class="ui-state"><span id='span_tag'>請按此上下拖曳</span><input type="text" disabled/>種類 4<audio id="{{task_type4_1}}" controls preload src="{{instance4_1}}">
               Your browser does not support the audio element.
             </audio></li>
           </ul>
