--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -27,19 +27,13 @@
     </ul>
     
       <fieldset>
-          <h1 class="fs-title" style="font-size:24px">實驗練習與介紹</h1>
-          <p style= "line-height: 1.5;">本實驗中您總共會測試 4 種不同的 Audio CAPTCHA，每一種 Audio CAPTCHA 您會完成 3 道不同的題目，共 12 道 Audio CAPTCHA 題目。每道題目皆是由 6 個英文 0~9 的數字所組成。每完成一種語音驗證碼，您會回答關於使用該 Audio CAPTCHA 上的體驗的相關問題： ”喜不喜歡“、及 ”難不難回答“ 等等，以及您對於該 Audio CAPTCHA 之建議與回饋。
-            <br><br>
-            為了讓您熟悉本實驗之研究介面，此一頁面與您待會在正式實驗中所會採用的介面相同以供您進行練習。請確保您處於一個可以正常聆聽語音之環境，利用下方練習試題進行音量之調整。
-            <br><br>
-            回答下列練習試題後，從下一頁開始為正式研究。
-            <br><br>
-            <b style="color:red">註：為確保本實驗之參與品質，若我們有偵測到「非正常」之回覆行為（例：異常回覆時間），我們將不給予實驗受測費用。</b>
-            <br><br>按下「播放鍵」後，請邊聽邊輸入您所聽到的六位阿拉伯數字:<br>
-            註 1：數字之間不需要空格<br>
-            註 2：若想要重新播放題目，亦可重新按下「播放鍵」
+          <h1 class="fs-title" style="font-size:24px">{{spot_id}}</h1>
+          <h2 class="fs-title" style="font-size:18px">{{task_type1_1}}</h2>
+          <h2 class="fs-title" style="font-size:18px">{{task_type2_1}}</h2>
+          <h2 class="fs-title" style="font-size:18px">{{task_type3_1}}</h2>
+          <h2 class="fs-title" style="font-size:18px">{{task_type4_1}}</h2>
 
-          </p>
+
           <audio id="0_1" controls preload src="{{practice}}" onplay="audio_play('0'); focustext('pro0');">
               Your browser does not support the audio element.
           </audio>
@@ -49,7 +43,7 @@
           <input name="late" id="late" type="hidden" value="" />
           <input name="table_id" id="table_id" type="hidden" value="{{table_id}}" />
           <input name="spot_id" id="spot_id" type="hidden" value="{{spot_id}}" />
-          <input name="group" id="group" type="hidden" value="{{group}}" />
+          <!-- <input name="group" id="group" type="hidden" value="{{group}}" /> -->
           <input name="task_order" id="task_order" type="hidden" value="{{task_order}}" />
           <input name="end_time" id="end_time" type="hidden" value="{{end_time}}" />
 
@@ -130,79 +124,9 @@
       </fieldset>
 
       <fieldset class="feedbackcard">
-          <h2 class="fs-title">回饋 1</h2>
-          <h3 class="fs-subtitle">請回答以下問題（*必填）</h3>
-          <label class="statement">(*)請問您喜歡剛剛測試的 Audio CAPTCHA 嗎？（1: 非常不喜歡; 5: 非常喜歡）</label>
-          <ul class='likert'>
-          <li>
-            <input type="radio" name="likert_fb1_1" value="1">
-            <label>(1)非常不喜歡</label>
-          </li>
-          <li>
-            <input type="radio" name="likert_fb1_1" value="2">
-            <label>(2)不喜歡</label>
-          </li>
-          <li>
-            <input type="radio" name="likert_fb1_1" value="3">
-            <label>(3)中立</label>
-          </li>
-          <li>
-            <input type="radio" name="likert_fb1_1" value="4">
-            <label>(4)喜歡</label>
-          </li>
-          <li>
-            <input type="radio" name="likert_fb1_1" value="5">
-            <label>(5)非常喜歡</label>
-          </li>
-          </ul>
-          <label class="statement">(*)請問您剛剛測試的 Audio CAPTCHA 容易回答嗎？（1: 非常難回答; 5: 非常好回答）</label>
-          <ul class='likert'>
-            <li>
-              <input type="radio" name="likert_fb1_2" value="1">
-              <label>(1)非常難回答</label>
-            </li>
-            <li>
-              <input type="radio" name="likert_fb1_2" value="2">
-              <label>(2)難回答</label>
-            </li>
-            <li>
-              <input type="radio" name="likert_fb1_2" value="3">
-              <label>(3)中立</label>
-            </li>
-            <li>
-              <input type="radio" name="likert_fb1_2" value="4">
-              <label>(4)好回答</label>
-            </li>
-            <li>
-              <input type="radio" name="likert_fb1_2" value="5">
-              <label>(5)非常好回答</label>
-            </li>
-            </ul>
-
-          <label class="statement">(*)請問您認為這個 Audio CAPTCHA 有什麼優點，讓你覺得喜歡或容易回答？</label>
-          <input type="text" name="text_fb1_1" id = "text_fb1_1"/>
-
-          <!-- <label class="statement">Do you prefer the current alphanumeric audio CAPTCHAs you already use relative to this design?</label>
-          <ul class='likert'>
-            <li>
-              <input type="radio" name="likert_fb1_3" value="yes"  checked>
-              <label>Yes</label>
-            </li>
-            <li>
-              <input type="radio" name="likert_fb1_3" value="no">
-              <label>No</label>
-            </li>
-          </ul> -->
-          <label class="statement">(*)請問您認為這個 Audio CAPTCHA 有什麼缺點，讓你覺得不喜歡或難回答？</label>
-          <input type="text" name="text_fb1_2" id = "text_fb1_2" />
-
-          <label class="statement">對於這個 Audio CAPTCHA 您是否有什麼建議以及想法可以分享給我們？ </label>
-          <input type="text" name="text_fb1_3" id = "text_fb1_3"/>
-
-          <p style="color:red">在開始下一輪的測驗前，請確定您的輸入法是否已經切換回數字輸入！</p>
-
+          <h2 class="fs-title">作答完畢後，請通知實驗執行人員。</h2>
           <input type="button" id="feedbacknext1" name="next" class="next action-button" value="Next" />
-    </fieldset>
+      </fieldset>
 
     <fieldset class="prototypecard">
       <h2 class="fs-title">種類 2</h2>
@@ -264,78 +188,8 @@
     </fieldset>
 
     <fieldset class="feedbackcard">
-      <h2 class="fs-title">回饋 2</h2>
-          <h3 class="fs-subtitle">請回答以下問題（*必填）</h3>
-          <label class="statement">(*)請問您喜歡剛剛測試的 Audio CAPTCHA 嗎？（1: 非常不喜歡; 5: 非常喜歡）</label>
-          <ul class='likert'>
-          <li>
-            <input type="radio" name="likert_fb2_1" value="1">
-            <label>(1)非常不喜歡</label>
-          </li>
-          <li>
-            <input type="radio" name="likert_fb2_1" value="2">
-            <label>(2)不喜歡</label>
-          </li>
-          <li>
-            <input type="radio" name="likert_fb2_1" value="3">
-            <label>(3)中立</label>
-          </li>
-          <li>
-            <input type="radio" name="likert_fb2_1" value="4">
-            <label>(4)喜歡</label>
-          </li>
-          <li>
-            <input type="radio" name="likert_fb2_1" value="5">
-            <label>(5)非常喜歡</label>
-          </li>
-          </ul>
-          <label class="statement">(*)請問您剛剛測試的 Audio CAPTCHA 容易回答嗎？（1: 非常難回答; 5: 非常好回答）</label>
-          <ul class='likert'>
-            <li>
-              <input type="radio" name="likert_fb2_2" value="1">
-              <label>(1)非常難回答</label>
-            </li>
-            <li>
-              <input type="radio" name="likert_fb2_2" value="2">
-              <label>(2)難回答</label>
-            </li>
-            <li>
-              <input type="radio" name="likert_fb2_2" value="3">
-              <label>(3)中立</label>
-            </li>
-            <li>
-              <input type="radio" name="likert_fb2_2" value="4">
-              <label>(4)好回答</label>
-            </li>
-            <li>
-              <input type="radio" name="likert_fb2_2" value="5">
-              <label>(5)非常好回答</label>
-            </li>
-            </ul>
-
-          <label class="statement">(*)請問您認為這個 Audio CAPTCHA 有什麼優點，讓你覺得喜歡或容易回答？</label>
-          <input type="text" name="text_fb2_1" id="text_fb2_1"/>
-
-          <!-- <label class="statement">Do you prefer the current alphanumeric audio CAPTCHAs you already use relative to this design?</label>
-          <ul class='likert'>
-            <li>
-              <input type="radio" name="likert_fb1_3" value="yes"  checked>
-              <label>Yes</label>
-            </li>
-            <li>
-              <input type="radio" name="likert_fb1_3" value="no">
-              <label>No</label>
-            </li>
-          </ul> -->
-          <label class="statement">(*)請問您認為這個 Audio CAPTCHA 有什麼缺點，讓你覺得不喜歡或難回答？</label>
-          <input type="text" name="text_fb2_2" id="text_fb2_2"/>
-
-          <label class="statement">對於這個 Audio CAPTCHA 您是否有什麼建議以及想法可以分享給我們？ </label>
-          <input type="text" name="text_fb2_3" id = "text_fb2_3"/>
-
-          <p style="color:red">在開始下一輪的測驗前，請確定您的輸入法是否已經切換回數字輸入！</p>
-
-          <input type="button" id="feedbacknext2" name="next" class="next action-button" value="Next" />
+      <h2 class="fs-title">作答完畢後，請通知實驗執行人員。</h2>
+      <input type="button" id="feedbacknext2" name="next" class="next action-button" value="Next" />
     </fieldset>
 
     <fieldset class="prototypecard">
@@ -398,78 +252,8 @@
     </fieldset>
 
     <fieldset class="feedbackcard">
-      <h2 class="fs-title">回饋 3</h2>
-          <h3 class="fs-subtitle">請回答以下問題（*必填）</h3>
-          <label class="statement">(*)請問您喜歡剛剛測試的 Audio CAPTCHA 嗎？（1: 非常不喜歡; 5: 非常喜歡）</label>
-          <ul class='likert'>
-          <li>
-            <input type="radio" name="likert_fb3_1" value="1">
-            <label>(1)非常不喜歡</label>
-          </li>
-          <li>
-            <input type="radio" name="likert_fb3_1" value="2">
-            <label>(2)不喜歡</label>
-          </li>
-          <li>
-            <input type="radio" name="likert_fb3_1" value="3">
-            <label>(3)中立</label>
-          </li>
-          <li>
-            <input type="radio" name="likert_fb3_1" value="4">
-            <label>(4)喜歡</label>
-          </li>
-          <li>
-            <input type="radio" name="likert_fb3_1" value="5">
-            <label>(5)非常喜歡</label>
-          </li>
-          </ul>
-          <label class="statement">(*)請問您剛剛測試的 Audio CAPTCHA 容易回答嗎？（1: 非常難回答; 5: 非常好回答）</label>
-          <ul class='likert'>
-            <li>
-              <input type="radio" name="likert_fb3_2" value="1">
-              <label>(1)非常難回答</label>
-            </li>
-            <li>
-              <input type="radio" name="likert_fb3_2" value="2">
-              <label>(2)難回答</label>
-            </li>
-            <li>
-              <input type="radio" name="likert_fb3_2" value="3">
-              <label>(3)中立</label>
-            </li>
-            <li>
-              <input type="radio" name="likert_fb3_2" value="4">
-              <label>(4)好回答</label>
-            </li>
-            <li>
-              <input type="radio" name="likert_fb3_2" value="5">
-              <label>(5)非常好回答</label>
-            </li>
-            </ul>
-
-          <label class="statement">(*)請問您認為這個 Audio CAPTCHA 有什麼優點，讓你覺得喜歡或容易回答？</label>
-          <input type="text" name="text_fb3_1" id = "text_fb3_1"/>
-
-          <!-- <label class="statement">Do you prefer the current alphanumeric audio CAPTCHAs you already use relative to this design?</label>
-          <ul class='likert'>
-            <li>
-              <input type="radio" name="likert_fb1_3" value="yes"  checked>
-              <label>Yes</label>
-            </li>
-            <li>
-              <input type="radio" name="likert_fb1_3" value="no">
-              <label>No</label>
-            </li>
-          </ul> -->
-          <label class="statement">(*)請問您認為這個 Audio CAPTCHA 有什麼缺點，讓你覺得不喜歡或難回答？</label>
-          <input type="text" name="text_fb3_2" id = "text_fb3_2"/>
-
-          <label class="statement">對於這個 Audio CAPTCHA 您是否有什麼建議以及想法可以分享給我們？ </label>
-          <input type="text" name="text_fb3_3" id = "text_fb3_3"/>
-
-          <p style="color:red">在開始下一輪的測驗前，請確定您的輸入法是否已經切換回數字輸入！</p>
-
-          <input type="button" id = "feedbacknext3" name="next" class="next action-button" value="Next" />
+      <h2 class="fs-title">作答完畢後，請通知實驗執行人員。</h2>
+      <input type="button" id = "feedbacknext3" name="next" class="next action-button" value="Next" />
     </fieldset>
 
     <fieldset class="prototypecard">
@@ -531,67 +315,9 @@
     </fieldset>
 
     <fieldset class="feedbackcard">
-      <h2 class="fs-title">回饋 4</h2>
-          <h3 class="fs-subtitle">請回答以下問題（*必填）</h3>
-          <label class="statement">(*)請問您喜歡剛剛測試的 Audio CAPTCHA 嗎？（1: 非常不喜歡; 5: 非常喜歡）</label>
-          <ul class='likert'>
-          <li>
-            <input type="radio" name="likert_fb4_1" value="1">
-            <label>(1)非常不喜歡</label>
-          </li>
-          <li>
-            <input type="radio" name="likert_fb4_1" value="2">
-            <label>(2)不喜歡</label>
-          </li>
-          <li>
-            <input type="radio" name="likert_fb4_1" value="3">
-            <label>(3)中立</label>
-          </li>
-          <li>
-            <input type="radio" name="likert_fb4_1" value="4">
-            <label>(4)喜歡</label>
-          </li>
-          <li>
-            <input type="radio" name="likert_fb4_1" value="5">
-            <label>(5)非常喜歡</label>
-          </li>
-          </ul>
-          <label class="statement">(*)請問您剛剛測試的 Audio CAPTCHA 容易回答嗎？（1: 非常難回答; 5: 非常好回答）</label>
-          <ul class='likert'>
-            <li>
-              <input type="radio" name="likert_fb4_2" value="1">
-              <label>(1)非常難回答</label>
-            </li>
-            <li>
-              <input type="radio" name="likert_fb4_2" value="2">
-              <label>(2)難回答</label>
-            </li>
-            <li>
-              <input type="radio" name="likert_fb4_2" value="3">
-              <label>(3)中立</label>
-            </li>
-            <li>
-              <input type="radio" name="likert_fb4_2" value="4">
-              <label>(4)好回答</label>
-            </li>
-            <li>
-              <input type="radio" name="likert_fb4_2" value="5">
-              <label>(5)非常好回答</label>
-            </li>
-            </ul>
-
-          <label class="statement">(*)請問您認為這個 Audio CAPTCHA 有什麼優點，讓你覺得喜歡或容易回答？</label>
-          <input type="text" name="text_fb4_1" id="text_fb4_1"/>
-
-          <label class="statement">(*)請問您認為這個 Audio CAPTCHA 有什麼缺點，讓你覺得不喜歡或難回答？</label>
-          <input type="text" name="text_fb4_2" id="text_fb4_2"/>
-
-          <label class="statement">對於這個 Audio CAPTCHA 您是否有什麼建議以及想法可以分享給我們？ </label>
-          <input type="text" name="text_fb4_3" id="text_fb4_3"/>
-
-          <!-- <input type="button" id="feedbacknext4" name="feedbacknext4" class="feedbacknext4 action-button" value="Submit" onclick="before_submit();"/> -->
-          <input type="button" id="feedbacknext4" name="next" class="next action-button" value="Next"/>
-        </fieldset>
+      <h2 class="fs-title">作答完畢後，請通知實驗執行人員。</h2>
+      <input type="button" id="feedbacknext4" name="next" class="next action-button" value="Next"/>
+    </fieldset>
 
         <fieldset id = "post_question">
           <h2 class="fs-title">測驗結束，請給予我們最後的回饋!</h2>
@@ -602,16 +328,16 @@
       
           <p style = "font-weight: bold;">(*)請按照您的喜好程度，以拖曳的方式排序您剛剛測試的所有 Audio CAPTCHA，最喜歡的放在最上面，依序排列下去。</p><br>
           <ul id="input_ul">
-            <li class="ui-state"><span id='span_tag'>請按此上下拖曳</span><input type="text" disabled/>種類 1<audio id="{{instance1_1}}" controls preload src="{{instance1_1}}">
+            <li class="ui-state"><span id='span_tag'>請按此上下拖曳</span><input type="text" disabled/>種類 1<audio id="{{task_type1_1}}" controls preload src="{{instance1_1}}">
               Your browser does not support the audio element.
             </audio></li>
-            <li class="ui-state"><span id='span_tag'>請按此上下拖曳</span><input type="text" disabled/>種類 2<audio id="{{instance2_1}}" controls preload src="{{instance2_1}}">
+            <li class="ui-state"><span id='span_tag'>請按此上下拖曳</span><input type="text" disabled/>種類 2<audio id="{{task_type2_1}}" controls preload src="{{instance2_1}}">
               Your browser does not support the audio element.
             </audio></li>
-            <li class="ui-state"><span id='span_tag'>請按此上下拖曳</span><input type="text" disabled/>種類 3<audio id="{{instance3_1}}" controls preload src="{{instance3_1}}">
+            <li class="ui-state"><span id='span_tag'>請按此上下拖曳</span><input type="text" disabled/>種類 3<audio id="{{task_type3_1}}" controls preload src="{{instance3_1}}">
               Your browser does not support the audio element.
             </audio></li>
-            <li class="ui-state"><span id='span_tag'>請按此上下拖曳</span><input type="text" disabled/>種類 4<audio id="{{instance4_1}}" controls preload src="{{instance4_1}}">
+            <li class="ui-state"><span id='span_tag'>請按此上下拖曳</span><input type="text" disabled/>種類 4<audio id="{{task_type4_1}}" controls preload src="{{instance4_1}}">
               Your browser does not support the audio element.
             </audio></li>
           </ul>
